@@ -407,3 +407,4 @@ Revision	Version Updated		Log Message
 468		C++			Refactor EU3toV2Coverter.cpp
 469		C++			More consise use of make_pair()
 470		C++			Make all output functions const
+471		C++			Unciv reforms give province improvements
